--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="content_description_add_stock" translatable="false">Add a stock item</string>
     <string name="bid_price">Bid Price</string>
     <string name="time">Time</string>
+    <string name="t_stock_nf">\"Stock Not Found\"</string>
 
 
 </resources>
